# Supervisor-AI

./: .env.example  AGENTS.md  PROJECT_CONTEXT.md  README.md  docker-compose.yml
backend/: README.md  pyproject.toml
backend/migrations/: README  env.py
backend/migrations/versions/: 20260721_0001_commercial_persistence.py
backend/src/supervisor_ai/: __init__.py  bootstrap.py  main.py
backend/tests/: conftest.py
backend/tests/api/: test_health.py  test_http_api.py  test_http_integration.py  test_mvp_contract.py  test_pagination.py
backend/tests/application/: test_financial_snapshot.py  test_get_collaborator_financial_timeline.py  test_get_commercial_event_details.py  test_get_financial_snapshot.py  test_get_financial_summary.py  test_get_processing_health.py  test_get_processing_run_details.py  test_list_commercial_events.py  test_list_processing_runs.py  test_process_and_persist_commercial_event.py  test_process_commercial_event.py
backend/tests/bootstrap/: __init__.py  test_bootstrap.py  test_financial_pipeline.py
backend/tests/cli/: test_cli.py  test_cli_integration.py
backend/tests/import_engine/: test_contracts.py  test_file_connector.py  test_pipeline.py
backend/tests/importing/: __init__.py  csv_factories.py  factories.py  test_batch.py  test_batch_integration.py  test_csv_adapter.py  test_csv_integration.py  test_importer.py  test_integration.py  test_mapper.py  test_parser.py  test_schema.py
backend/tests/integration/: test_import_processing_flow.py  test_transactional_commercial_event_flow.py
backend/tests/persistence/: __init__.py  factories.py  test_architecture.py  test_database.py  test_events.py  test_ledger.py  test_processing_health.py  test_processing_run_listing.py  test_processing_runs.py  test_unit_of_work.py
backend/tests/processing_engine/: test_adapters.py  test_composite.py  test_normalization.py  (+1 more)
(+204 files in other folders)
