[project]
name = "supervisor-ai"
version = "0.1.0"
description = "Plataforma de inteligência operacional para supervisão de atendimento."
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "alembic>=1.14,<2",
    "fastapi>=0.115,<1",
    "psycopg[binary]>=3.2,<4",
    "python-multipart>=0.0.20,<1",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "uvicorn[standard]>=0.34,<1",
]

[project.scripts]
supervisor-ai = "supervisor_ai.cli:main"

[dependency-groups]
dev = [
    "httpx>=0.28,<1",
    "pytest>=8.3,<9",
    "ruff>=0.9,<1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/supervisor_ai"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
